--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "Cel",
   "main": "./lib/atom-cel",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "The Official Cel Language plugin for Atom.",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
     "atom-workspace": "atom-cel:toggle"
   },
@@ -13,6 +12,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
